; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Client.c_CiInitConfiguration.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Client.c_CiInitConfiguration.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i32, i32, %struct.TYPE_8__, i32, i8*, i8* }
%struct.TYPE_8__ = type { i32, i32, i32, i32, i32, i32 }
%struct.TYPE_10__ = type { i32 }

@CiCompareAccount = common dso_local global i32 0, align 4
@CiCompareUnixVLan = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [17 x i8] c"LC_LOAD_CONFIG_1\00", align 1
@.str.1 = private unnamed_addr constant [17 x i8] c"LC_LOAD_CONFIG_3\00", align 1
@.str.2 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@CLIENT_DEFAULT_KEEPALIVE_HOST = common dso_local global i32 0, align 4
@CLIENT_DEFAULT_KEEPALIVE_PORT = common dso_local global i32 0, align 4
@CONNECTION_UDP = common dso_local global i32 0, align 4
@CLIENT_DEFAULT_KEEPALIVE_INTERVAL = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [17 x i8] c"LC_LOAD_CONFIG_2\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @CiInitConfiguration(%struct.TYPE_9__* %0) #0 {
  %2 = alloca %struct.TYPE_9__*, align 8
  store %struct.TYPE_9__* %0, %struct.TYPE_9__** %2, align 8
  %3 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %4 = icmp eq %struct.TYPE_9__* %3, null
  br i1 %4, label %5, label %6

5:                                                ; preds = %1
  br label %70

6:                                                ; preds = %1
  %7 = load i32, i32* @CiCompareAccount, align 4
  %8 = call i8* @NewList(i32 %7)
  %9 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %10 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %9, i32 0, i32 5
  store i8* %8, i8** %10, align 8
  %11 = call %struct.TYPE_10__* (...) @GetOsInfo()
  %12 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i64 @OS_IS_UNIX(i32 %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %21

16:                                               ; preds = %6
  %17 = load i32, i32* @CiCompareUnixVLan, align 4
  %18 = call i8* @NewList(i32 %17)
  %19 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %20 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %19, i32 0, i32 4
  store i8* %18, i8** %20, align 8
  br label %21

21:                                               ; preds = %16, %6
  %22 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %23 = call i32 @CLog(%struct.TYPE_9__* %22, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  %24 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %25 = call i32 @CiLoadConfigurationFile(%struct.TYPE_9__* %24)
  %26 = icmp eq i32 %25, 0
  br i1 %26, label %27, label %64

27:                                               ; preds = %21
  %28 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %29 = call i32 @CLog(%struct.TYPE_9__* %28, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0))
  %30 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %31 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %30, i32 0, i32 3
  %32 = load i32, i32* %31, align 8
  %33 = call i32 @Sha0(i32 %32, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.2, i64 0, i64 0), i32 0)
  %34 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %35 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %34, i32 0, i32 2
  %36 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %35, i32 0, i32 0
  store i32 0, i32* %36, align 8
  %37 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %38 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %37, i32 0, i32 2
  %39 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %38, i32 0, i32 5
  %40 = load i32, i32* %39, align 4
  %41 = load i32, i32* @CLIENT_DEFAULT_KEEPALIVE_HOST, align 4
  %42 = call i32 @StrCpy(i32 %40, i32 4, i32 %41)
  %43 = load i32, i32* @CLIENT_DEFAULT_KEEPALIVE_PORT, align 4
  %44 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %45 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %44, i32 0, i32 2
  %46 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %45, i32 0, i32 4
  store i32 %43, i32* %46, align 8
  %47 = load i32, i32* @CONNECTION_UDP, align 4
  %48 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %49 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %48, i32 0, i32 2
  %50 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %49, i32 0, i32 3
  store i32 %47, i32* %50, align 4
  %51 = load i32, i32* @CLIENT_DEFAULT_KEEPALIVE_INTERVAL, align 4
  %52 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %53 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %52, i32 0, i32 2
  %54 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %53, i32 0, i32 2
  store i32 %51, i32* %54, align 8
  %55 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %56 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %55, i32 0, i32 2
  %57 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %56, i32 0, i32 1
  store i32 0, i32* %57, align 4
  %58 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %59 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %58, i32 0, i32 0
  %60 = load i32, i32* %59, align 8
  %61 = call i32 @NewEraser(i32 %60, i32 0)
  %62 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %63 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %62, i32 0, i32 1
  store i32 %61, i32* %63, align 4
  br label %67

64:                                               ; preds = %21
  %65 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %66 = call i32 @CLog(%struct.TYPE_9__* %65, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.3, i64 0, i64 0))
  br label %67

67:                                               ; preds = %64, %27
  %68 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %69 = call i32 @CiSetVLanToDefault(%struct.TYPE_9__* %68)
  br label %70

70:                                               ; preds = %67, %5
  ret void
}

declare dso_local i8* @NewList(i32) #1

declare dso_local i64 @OS_IS_UNIX(i32) #1

declare dso_local %struct.TYPE_10__* @GetOsInfo(...) #1

declare dso_local i32 @CLog(%struct.TYPE_9__*, i8*) #1

declare dso_local i32 @CiLoadConfigurationFile(%struct.TYPE_9__*) #1

declare dso_local i32 @Sha0(i32, i8*, i32) #1

declare dso_local i32 @StrCpy(i32, i32, i32) #1

declare dso_local i32 @NewEraser(i32, i32) #1

declare dso_local i32 @CiSetVLanToDefault(%struct.TYPE_9__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
